--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,12 @@
     margin: 0;
     padding: 0;
     
+    
+}
+html, body {
+    height: 100%;
 }
 body {
     background-color: var(--branco);
+    
 }
