--- a/styles/corpo.css
+++ b/styles/corpo.css
@@ -6,13 +6,13 @@
     width: 100%;
     gap: 2em;
     
+    
 }
 .corpo__conteudo {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    position: relative;
     margin: .5em;
 
 }
@@ -93,47 +93,48 @@
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    position: relative;
+    width: 100%;
+    
     
 }
 .imagemeta__imagem {
     margin: 2em;
+   
     align-items: center;
-    width: 80%;
+    max-width: 500px;
        
 }
 .texto2 {
     font-family: var(--fontePrincipal);
     color: var(--preto);
-    font-size: 20px;
+    font-size: 29px;
     font-weight: 480 bold;
     width: 90%;
     align-items: center;
     text-align: center;
     margin: 1em;
-
+    line-height: 1em;
 }
 .cartao__destaque{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    position: relative;
     background-image: linear-gradient(var(--branco), white);
+    line-height: 1.2em;
 
 }
 .cartao__1 {
     width: 330px;
-    height: 150px;
+    height: 170px;
     background-color: var(--branco);
     border-radius: 0px;
-    padding: 20px;
+    padding: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-bottom: 3px solid var(--rosaEscuro); 
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
     margin: 10px;
    
 }
@@ -144,13 +145,13 @@
 }
 .titulo__cartao{
     font-family: var(--fontePrincipal);
-    font-size: 32px;
+    font-size: 26px;
     font-weight: 600 bold;
-    padding: 0.2px;
+    padding: 12px;
 }
 .texto__cartao{
     font-family: var(--fontePrincipal);
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 400;
     padding: .5em;
     text-align: center;
@@ -158,6 +159,9 @@
 }
 
 @media (min-width: 1024px){
+    .lista-menu__titulo {
+        display: none;
+    }
     .corpo__imagem {
         width: 50%;
         align-items: center;
@@ -195,4 +199,13 @@
         flex-direction: row-reverse;
     }
     
+    .cartao__1 {
+        width: 400px;
+    height: 200px;
+
+    }
+    .texto__cartao{
+        line-height: 1.2em;
+        word-break: unset;
+    }
 }
