--- a/styles/corpoContatos.css
+++ b/styles/corpoContatos.css
@@ -26,15 +26,26 @@
     border: 1px solid var(--preto);
     border-radius: 24px;
     width: 90%;
-    color: var(--rosaClaro);
+    color: var(--rosaEscuro);
 }
 
 .contato__email::placeholder {
     font-family: var(--fontePrincipal);
-    color: var(--rosaClaro);
+    color: var(--rosaEscuro);
     padding-left: 3em;
     background-position: 1em;
     
+}
+.button {
+    padding: .5em;
+    border: 1px solid var(--preto);
+    border-radius: 24px;
+    width: 10%;
+    color: var(--rosaEscuro);
+    background-color: var(--preto);
+    font-family: var(--fontePrincipal);
+    font-size: 17px;
+    margin: 1em;
 }
 
 @media screen and (min-width: 1024px) {
