--- a/styles/corpoSobre.css
+++ b/styles/corpoSobre.css
@@ -4,25 +4,24 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 1em;
-    
+   
 }
 .sobre__titulo {
     font-family: var(--fontePrincipal);
-    color: var(--rosaClaro);
-    font-size: 38px;
-    font-weight: 500 bold;
-    margin: 1em 0 1em 0;
+    color: var(--rosaEscuro);
+    font-size: 36px;
+    font-weight: 500 ;
+    margin: 1.5em 0 .3em 0;
     width: 100%;
-    align-items: center;
     text-align: center;
-    
 }
 .sobre__descricao {
     font-family: var(--fontePrincipal);
-    font-size: 25px;
-    font-weight: 400;
+    font-size: 24px;
+    font-weight: 200;
     text-align: center;
-    padding: 1em;
+    padding: .3em;
+    line-height: 1em;
+    word-break: inherit;
 
 }
