--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -1,11 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Krona+One&family=Montserrat:wght@400;600&display=swap');
+
+
 .rodape {
+   
+   
     
+}
+
+
+.rodape__texto {
+    font-family: var(--fontePrincipal);
     text-align: center;
     color: var(--rosaEscuro);
     font-family: 'Montserrat', sans-serif;
-    padding: 17px;
+    padding: 1em;
     font-weight: 400;
 
     
- }
+}
