Alteração - Depoimento - Footer - Carrossel

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 @import url("/styles/rodape.css");
 @import url("/styles/corpoSobre.css");
 @import url("/styles/corpoDepoimentos.css");
+ @import url("/styles/carrossel.css");
 
 
 :root {
