--- a/styles/corpoDepoimentos.css
+++ b/styles/corpoDepoimentos.css
@@ -1,18 +1,21 @@
-
-.sobre {
+.corpo__sobre{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    margin: 1em;
+}
+.sobre {
+   margin: 0 0 3em 0;
+   display: flex;
+   flex-direction: column;
+
    
 }
 .sobre__titulo {
     font-family: var(--fontePrincipal);
     color: var(--rosaEscuro);
-    font-size: 38px;
+    font-size: 34px;
     font-weight: 600 ;
-    margin: 1.5em 0 .3em 0;
-    width: 100%;
+    margin: 0 0 10px 0;
     text-align: center;
 }
 .sobre__descricao {
@@ -25,8 +28,61 @@
     word-break: inherit;
 
 }
+
+.imagem__pessoa{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin: 2em auto;
+}
 @media screen and (min-width: 1024px){
-    .sobre{
-        padding: 0 16em;
+    .corpo__sobre1{
+        display: flex;
+        margin: 1em;
+        justify-content: flex-start;
+        margin: 1em;
     }
+    .sobre {
+        margin: 0;
+        padding: 1em;
+    }
+   
+    .sobre__descricao{  
+        text-align: left;
+        font-size: 24px;
+        width: 80%;
+}
+    .sobre__titulo{
+        text-align: left;
+}
+    .imagem__pessoa{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        margin: 2em ; 
+        
+}
+
+@media screen and (min-width: 1728px){
+
+        .corpo__sobre1{
+            justify-content: space-between;
+        }
+        .sobre__titulo{
+            font-size: 44px;
+        }
+        .sobre__descricao {
+            font-size: 34px;
+        
+        }
+        .imagem__pessoa{
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            margin: 2em ; 
+            
+    }
+
+
+}
 }
