--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -25,21 +25,24 @@
     font-family: var(--fontePrincipal);
     font-size: 18px;
     font-size:300;
-    margin: 1em 0;
+    
 }
-
+.contato__botao{
+    padding: 1em;
+}
 .contato__email {
     padding: 1em;
     border: 1px solid var(--preto);
     border-radius: 24px;
     width: 50%;
     color: var(--rosaEscuro);
+    
 }
 
 .contato__email::placeholder {
     font-family: var(--fontePrincipal);
     color: var(--rosaEscuro);
-    padding-left: 3em;
+    padding-left: 1em;
     background-position: 1em;
     
 }
@@ -73,29 +76,80 @@
 @media screen and (min-width: 1024px) {
     .contato {
         margin: 1em;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center ;
+        
     }
+
     .contato__titulo {
         font-size: 24px;
+        padding: 0 1em;
+        margin: 5px 0;
+    }
+    .contato__texto {
+        font-size: 18px;
+        padding: 0 1.2em;
+        
     }
     .contato__email {
-        width: 28%;
+        width: 40%;
     }
-   
+   .contato__botao{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    margin: 1em;
+    width: 80%;
+   }
     .button {
-        width: 10%
+        width: 20%
     }
     .contato__descricao {
         margin: 1em;
+             
+        
+    }
+   
+    .contato__texto {
+        align-items: end;
     }
     .rodape {
         margin: 1em 0 0 0;
+        width: 100%;
      
     }
     .rodape__texto{
         padding: 1em ;
      
     }
+   
 }
 
-
+@media screen and (min-width: 1728px) {
+    .contato__botao{
+         display: flex;
+         flex-direction: row-reverse;
+         justify-content: center;
+         margin: 1em;
+         width: 80%;
+    }
+    .button {
+        width: 10%
+    }
+    .contato__email {
+        width: 40%;
+    }
+    .contato__titulo {
+        font-size: 34px;
+        padding: 0 1em;
+        margin: 5px 0;
+    }
+    .contato__texto {
+        font-size: 28px;
+        padding: 0 1.2em;
+        
+    }
+}
 
