--- a/styles/corpoSobre.css
+++ b/styles/corpoSobre.css
@@ -39,11 +39,17 @@
     
 
 }
+.imagem1{
+    display: none;
+}
 @media screen and (min-width: 1024px){
+    .conteudo{
+        margin: 5em;
+    }
     .conteudo__contaner{
          display: flex;
          flex-wrap: wrap;
-         margin: 1em;
+        
        
     }
     .paragrafo{
@@ -59,22 +65,22 @@
     .paragrafo2{
         margin: 0 1em;
     }
-    .imagem {
+    .imagem1 {
         width: 100%;
         height: 100%;
     }
     .imagem__conteudo {
         justify-content: center ;
         align-items: center;
-        padding: 1em 0 0 0;
+        padding: 3em 0 0 0;
         border-radius: 0 0;
-        float: right;
+       
     }
     .conteudo__descricao {
         font-family: var(--fontePrincipal);
         font-size: 26px;
         width: 80%;
-        padding:  1em 2em 0 1em;
+        padding:  1em 0 0 0;
         line-height: 1.3em;
         
         
@@ -85,29 +91,39 @@
         font-family: var(--fontePrincipal);
         font-size: 26px;
         width: 80%;
-        padding: .5em 0 1em 2em ;
         line-height: 1.3em;
         
-    
-        
     }
+    .imagem1{
+        display:block;
+    }  
+    .imagem{
+        display: none;
+    } 
    
 }
 
 @media screen and (min-width: 1728px){
+    .conteudo{
+        margin: 10em;
+    }
+  
     .imagem__conteudo {
         border-radius: 50%;
+    
     }
     .conteudo__descricao1{
         font-size: 38px;
-        padding: 2em 0 1em 2em 
+        padding: 2em 1em 0em 0;
     }
     .conteudo__descricao{
         font-size: 38px;
+        padding: 2em 0 0em 0;
        
     }
     .conteudo__titulo{
         font-size: 42px;
     }
+    
 
 }
