--- a/styles/corpoSobre.css
+++ b/styles/corpoSobre.css
@@ -19,6 +19,13 @@
     font-weight: 500 ;
     margin: 1em 0 0 .3em;
 }
+.conteudo__titulo1 {
+    font-family: var(--fontePrincipal);
+    color: var(--rosaEscuro);
+    font-size: 36px;
+    font-weight: 500 ;
+    margin: 1em 0 0 .3em;
+}
 .conteudo__descricao {
     font-family: var(--fontePrincipal);
     font-size: 24px;
@@ -72,7 +79,6 @@
     .imagem__conteudo {
         justify-content: center ;
         align-items: center;
-        padding: 3em 0 0 0;
         border-radius: 0 0;
        
     }
@@ -100,6 +106,9 @@
     .imagem{
         display: none;
     } 
+    .conteudo__titulo1 {
+        margin: 0 0 1em 1em;
+    }
    
 }
 
@@ -110,11 +119,12 @@
   
     .imagem__conteudo {
         border-radius: 50%;
+
     
     }
     .conteudo__descricao1{
         font-size: 38px;
-        padding: 2em 1em 0em 0;
+        padding: 0 1em 0em 0;
     }
     .conteudo__descricao{
         font-size: 38px;
