Mudança de footer

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
  @import url("/styles/carrossel.css");
  @import url("/styles/corpoCadastro.css");
  @import url("/styles/corpoCadastro2.css");
+ @import url("/styles/footer.css");
 
 
 :root {
