--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -5,22 +5,23 @@
     font-family: var(--fontePrincipal);
     font-size: 24px;
     font-weight: 700;
-    padding: 3em 0 1em 0;
+    padding: 3em 0 2em 0;
     text-transform: uppercase;
 
 }
+
 
 .swiper-slide img {
     width: 100%;
 
 }
-.swiper-button-prev, 
-.swiper-button-next {
-    display: none;
-}
+
 .swiper-pagination {
     position: initial;
     margin: .5em 0;
+}
+.carrossel__container1 {
+    margin: 1em;
 }
 
 
@@ -32,7 +33,7 @@
         font-size: 26px;
     }
     .swiper-pagination {
-        margin: 2em 0 3em 0;
+        margin: 2em 0 1em 0;
     }
     .swiper {
         width: 60%;
@@ -43,8 +44,70 @@
         top: 60%;
         
     }
-    .carrossel__container {
-        margin: 2em;
+    .carrossel__container1 {
+        margin: 5em;
+    }
+    
+.swiper-slide img {
+    width: 100%;
+
+}
+}
+
+@media screen and (min-width: 1728px){
+    .carrossel__container1 {
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
+        
+    }
+    .swiper-pagination {
+        margin: 1em 0;
+     }
+     .swiper {
+        width: 80%;
+    }
+   
+}
+/*depoimentos*/
+
+
+
+.corpo__titulo {
+    color: var(--preto);
+    background-color: var(--branco);
+    text-align: center;
+    font-family: var(--fontePrincipal);
+    font-size: 24px;
+    font-weight: 700;
+    padding: 3em 0 2em 0;
+    text-transform: uppercase;
+
+}
+
+
+.swiper-pagination {
+    position: initial;
+    margin: .5em 0;
+}
+
+
+
+
+
+@media screen and (min-width: 1024px) {
+    .corpo__titulo{
+        font-size: 26px;
+    }
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+    .swiper {
+        width: 60%;
+    }
+   
+    .carrossel__container1 {
+        margin: 3em 0;
     }
 }
 
