--- a/styles/corpoCadastro2.css
+++ b/styles/corpoCadastro2.css
@@ -17,7 +17,7 @@
 }
 
 .formulario__container{
-    padding: 3em;
+    padding:  0 3em;
 }
 
 .botao1 {
@@ -30,18 +30,18 @@
     
 }
 .botao__imagem1{
-    padding:  0;
+    padding:  0 0 7em 0;
 
 }
 .botao__texto1 {
     border-radius: 8px;
     background-color: var(--rosaEscuro);
     font-family: var(--fontePrincipal);
-    font-size: 15px;
+    font-size: 16px;
     color: var(--branco);
     border: 8px solid var(--rosaEscuro);
-    padding: 1em 3.5em;
     font-weight: 600;
+    padding: 1em 3em;
     text-decoration: none;
     text-transform: uppercase;
     
@@ -51,6 +51,18 @@
     left: 50%; /* Alinha o botão horizontalmente no centro */
     transform: translate(-50%, -50%); /* Centraliza o botão */
     z-index: 1; /* Coloca o botão sobre a imagem */
+
+}
+.botao__texto1:hover{
+    color: var(--preto);
+}
+
+.bolha {
+    position: absolute; /* Define a posição absoluta para a imagem */
+    top: 50%; /* Alinha o botão verticalmente no centro */
+    left: 50%; /* Alinha o botão horizontalmente no centro */
+    transform: translate(-50%, -50%); /* Centraliza o botão */
+    z-index: -1; /* Coloca a imagem atrás do botão */
 
 }
 .botao__texto1:hover{
