Fiz mudanças na pagina de depoimentos para melhor visualização dos depoimentos colocar em cards.

--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -57,7 +57,7 @@
 @media screen and (min-width: 1728px){
     .carrossel__container1 {
         display: flex;
-        margin: 0 20vw 3em 20vw;
+       margin: 2em;
         align-items: center;
         
     }
@@ -114,7 +114,7 @@
 @media screen and (min-width: 1728px){
     .carrossel__container {
         display: flex;
-        margin: 0 20vw 3em 20vw;
+        
         align-items: center;
         
     }
